# woc-download

./: .gitignore  DESIGN.md  LIBRARIES.md  README.md  USAGE.md  WHISPER_SETUP.md  download_woc_materials.py  draft_【WOC】AIチャットボット開発データベース.xlsx  pyproject.toml
docs/: SPECIFICATION.md
src/woc_download/: __init__.py  __main__.py  cli.py  database.py  dedup.py  executor.py  filename.py  logger.py  manager.py  models.py  utils.py
subtitles/コンテンツ/: 10_申込率10%以上を実現するLINEステップの作り方_video.en.vtt  2-2_PDCAサイクル構築ステップ_資料1.xlsx  2-3_実践！PDCAサイクルの構築_資料1.xlsx  2-5_目標達成率を引き上げる絶対達成理論_資料1.xlsx  3-2_サービス設計ワーク_資料1.xlsx  3-5_サービス設計 サポート編_資料1  申込率を引き上げる参加特典のつくり方_video.en.vtt
