[project]
name = "woc-download"
version = "1.0.0"
description = "WOC講義資料ダウンロードシステム"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # 必須
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "yt-dlp>=2024.0.0",
    "gdown>=5.0.0",

    # UI/UX
    "tqdm>=4.66.0",
    "rich>=13.0.0",

    # エラーハンドリング
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

validation = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["download_woc_materials.py"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
